added styles to hero block

--- a/src/styles/vars/colors/index.scss
+++ b/src/styles/vars/colors/index.scss
@@ -1,5 +1,5 @@
 :root {
-    --color-green: #49SE57;
+    --color-green: #495e57;
     --color-yellow: #face14;
     --color-orange: #ee9972;
     --color-cream: #fcdabb;
