--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,7 @@ html {
         "Helvetica Neue",
         sans-serif;
     background-color: var(--color-white);
+    font-size: 1.5rem;
 }
 
 ul,
