--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -37,18 +37,88 @@
     }
 
     &__highlights {
-        &__header {
+        padding-bottom: 40px;
+
+        &-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
+
+            padding: 20px 0;
+
+            & a {
+                display: inline-block;
+                padding: 10px 20px;
+                background-color: var(--color-yellow);
+                border-radius: 10px;
+            }
         }
     }
 
-    &__testimonials {
-        background-color: var(--color-cream);
+    &__spesials {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        gap: 20px;
+    }
+
+    &__card {
+        $card-padding: 0 20px;
+
+        background-color: #ffffff;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        overflow: hidden;
+
+        width: 33.333%;
+
+        &-img {
+            width: 100%;
+            height: 200px;
+            margin-bottom: 20px;
+        }
+
+        &-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: $card-padding;
+            margin-bottom: 20px;
+        }
+
+        &-description {
+            padding: $card-padding;
+            font-size: 0.8rem;
+
+            margin-bottom: 70px;
+        }
+
+        &-order-btn {
+            display: inline-block;
+            background-color: transparent;
+
+            padding: $card-padding;
+            margin-bottom: 20px;
+        }
     }
 
     &__about {
+        & h1 {
+            font-size: 1.5rem;
+            margin-bottom: 5px;
+        }
+        & h3 {
+            margin-bottom: 10px;
+        }
+        & p {
+            width: 400px;
+            text-align: justify;
+        }
+        & img {
+            width: 300px;
+            height: auto;
+        }
     }
 }
 
@@ -63,7 +133,12 @@
         top: 10px;
         right: 0;
         width: 300px;
-        height: 300px;
+        height: 340px;
         object-fit: cover;
     }
+}
+
+.about {
+    background-color: var(--color-white);
+    color: var(--color-black);
 }
