--- a/src/components/BookingForm/BookingForm.scss
+++ b/src/components/BookingForm/BookingForm.scss
@@ -1,12 +1,37 @@
 label {
     display: block;
+    margin-bottom: 5px;
 }
 .form {
-    width: 600px;
-    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 100%;
+    margin-bottom: 20px;
+
+    font-size: 0.9rem;
+}
+
+.form h3 {
+    text-align: center;
+    padding: 20px;
 }
 
 .field {
     padding: 30px;
     width: 100%;
+}
+
+input,
+select {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+input[type="submit"] {
+    width: 200px;
+    background-color: var(--color-yellow);
 }
